--- a/anduril-config.json
+++ b/anduril-config.json
@@ -11,7 +11,6 @@
             "directory": "static",
             "url_prefix": "/static/"
         },
-        "log_requests": true,
-        "logs_directory": "logs"
+        "log_requests": true
     }
 }
