Working version of config encryption

--- a/configuration/anduril-config.json
+++ b/configuration/anduril-config.json
@@ -2,7 +2,7 @@
     "https": {
         "network": {
             "ip_accept_host": "any",
-            "tcp_port": 443,
+             "tcp_port": 443,
             "tls_cert_path": "/etc/letsencrypt/live/notes.acicovic.me/fullchain.pem",
             "tls_key_path": "/etc/letsencrypt/live/notes.acicovic.me/privkey.pem"
         },
@@ -23,19 +23,20 @@
     "repository": {
         "protocol": "ssh",
         "host": "github.com",
-        "repo_url_path": "/cicovic-andrija/notes.git",
+        "repo_path": "/cicovic-andrija/notes.git",
         "remote": "origin",
         "branch": "master",
         "relative_content_path": "notes",
         "ssh_auth": {
             "user": "git",
-            "private_key_path": ""
+            "private_key_path": "",
+            "private_key_password": ""
         }
     },
     "settings": {
         "publish_private_articles": false,
         "publish_personal_articles": true,
-        "repository_sync_period": "5m",
+        "repository_sync_period": "15m",
         "stale_file_cleanup_period": "24h"
     }
 }
