Update Makefile and anduril.service

--- a/configuration/anduril.service
+++ b/configuration/anduril.service
@@ -1,6 +1,7 @@
 [Unit]
-Description=Notes Web Server
-After=network.target
+Description=Anduril Article Server
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=simple
