--- a/configuration/anduril-config.json
+++ b/configuration/anduril-config.json
@@ -10,13 +10,12 @@
         "file_server": {
             "url_prefix": "/assets/",
             "allowed": [
-                "frontendProcessing.js",
-                "stylesheet.css",
-                "bootstrap.bundle.min.js",
-                "bootstrap.min.css",
-
                 "styles.css",
                 "icons/favicon.ico",
+                "icons/code.png",
+                "icons/code@2x.png",
+                "icons/search.png",
+                "icons/search@2x.png",
                 "icons/lionfish.png",
                 "icons/chevron-up@2x.png"
             ]
