Add missing icons

--- a/configuration/anduril-config.json
+++ b/configuration/anduril-config.json
@@ -18,7 +18,9 @@
                 "icons/code@2x.png",
                 "icons/search.png",
                 "icons/search@2x.png",
+                "icons/chevron-up.png",
                 "icons/chevron-up@2x.png",
+                "icons/sidebar.png",
                 "icons/lionfish.png",
                 "icons/octopus.png"
             ]
