--- a/configuration/anduril-config.json
+++ b/configuration/anduril-config.json
@@ -38,7 +38,7 @@
         "ssh_auth": {
             "user": "git",
             "private_key_path": "/etc/github/auth/notes-anduril-prod-v2.key",
-            "private_key_password": "matador"
+            "private_key_password": ""
         }
     },
     "settings": {
