Added a look and feel page

--- a/configuration/anduril-config.json
+++ b/configuration/anduril-config.json
@@ -22,7 +22,7 @@
                 "icons/chevron-up@2x.png",
                 "icons/sidebar.png",
                 "icons/lionfish.png",
-                "icons/octopus.png"
+                "icons/creature.png"
             ]
         },
         "log_requests": true,
